<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_jala"
        android:textColor="@color/grey"

        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/choice_your_best_food"
        android:textColor="@color/black"
        android:textSize="20sp"

        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_welcome" />

    <LinearLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"

        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_choice">

        <EditText
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:autofillHints="name"
            android:background="@drawable/bg_edittext"
            android:hint="@string/search_food"
            android:padding="8dp"


            android:textStyle="bold" />

        <ImageButton
            android:layout_width="46dp"
            android:layout_height="46dp"

            android:background="@color/bg_btn"
            android:contentDescription="@string/search_button"
            android:src="@drawable/search" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        android:gravity="center"

        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_search">

        <Button
            android:id="@+id/btn_donut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bg_btn"
            android:text="@string/donut"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/pinkDonut_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bg_btn"
            android:text="@string/pink_donut"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/floating_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bg_btn"

            android:text="@string/floating"
            android:textColor="@color/black" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>